[gd_scene load_steps=14 format=3 uid="uid://xjlmc1nffh6s"]

[ext_resource type="Script" path="res://main.gd" id="1_4qa7l"]
[ext_resource type="PackedScene" uid="uid://cikc8nbmcdefa" path="res://player.tscn" id="3_kxrvv"]
[ext_resource type="PackedScene" uid="uid://cl0jlas0hf11t" path="res://door.tscn" id="5_o832h"]
[ext_resource type="PackedScene" uid="uid://ir32po0sb3rq" path="res://shotgun_pickup.tscn" id="7_hsfff"]
[ext_resource type="PackedScene" uid="uid://qjm3k0r8nisy" path="res://enemy.tscn" id="7_mqlxc"]
[ext_resource type="PackedScene" uid="uid://bqldewmvd7lha" path="res://boss.tscn" id="8_ovasc"]
[ext_resource type="FontFile" uid="uid://c2hmtum28087v" path="res://Varnished.ttf" id="11_ruo62"]
[ext_resource type="AudioStream" uid="uid://bc23tj53ibm06" path="res://Assets/BGM/BGM.wav" id="12_kyada"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8niew"]
size = Vector2(288.375, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_122wp"]
size = Vector2(18.875, 137.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jp7v2"]
size = Vector2(290, 14.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfxeb"]
size = Vector2(17.75, 167)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgo7o"]
bg_color = Color(0, 0, 0, 0.827451)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 26
corner_radius_bottom_left = 25
corner_detail = 1

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4qa7l")
enemy_scene = ExtResource("7_mqlxc")
enemy_limit = 10
boss_scene = ExtResource("8_ovasc")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_right = 1152.0
offset_bottom = 649.0
color = Color(0.729412, 0.729412, 0.729412, 1)

[node name="Player" parent="." instance=ExtResource("3_kxrvv")]
position = Vector2(581, 556)
max_health = 500
health = 500

[node name="Change_Door" type="Node2D" parent="."]

[node name="ShotgunPickup" parent="." instance=ExtResource("7_hsfff")]
position = Vector2(1576, 547)
scale = Vector2(3.08, 3.08)

[node name="Door1" parent="." instance=ExtResource("5_o832h")]
position = Vector2(234, 73)

[node name="Door2" parent="." instance=ExtResource("5_o832h")]
position = Vector2(582, 73)

[node name="Door3" parent="." instance=ExtResource("5_o832h")]
position = Vector2(929, 73)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(42, 91)
scale = Vector2(4, 4)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(134.5, -12)
shape = SubResource("RectangleShape2D_8niew")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
z_index = -1
y_sort_enabled = true
offset_left = -10.0
offset_top = -23.0
offset_right = 279.0
offset_bottom = -1.0
color = Color(0.156863, 0, 0.745098, 1)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(42, 91)
scale = Vector2(4, 4)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-1.375, 74.75)
shape = SubResource("RectangleShape2D_122wp")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D2"]
offset_left = -10.0
offset_top = -21.0
offset_right = 11.0
offset_bottom = 143.0
color = Color(0.156863, 0, 0.745098, 1)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(42, 91)
scale = Vector2(4, 4)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(134.75, 133.75)
shape = SubResource("RectangleShape2D_jp7v2")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D3"]
offset_left = -10.5
offset_top = 126.75
offset_right = 278.5
offset_bottom = 141.75
color = Color(0.156863, 0, 0.745098, 1)

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(42, 91)
scale = Vector2(4, 4)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(269.875, 60.25)
shape = SubResource("RectangleShape2D_sfxeb")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D4"]
offset_left = 258.0
offset_top = -23.0
offset_right = 279.0
offset_bottom = 144.0
color = Color(0.156863, 0, 0.745098, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
offset_left = 543.0
offset_top = 585.0
offset_right = 631.0
offset_bottom = 663.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
z_index = 1
offset_left = 1056.0
offset_top = 273.0
offset_right = 1163.0
offset_bottom = 377.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
z_index = 1
offset_left = -6.0
offset_top = 275.0
offset_right = 99.0
offset_bottom = 385.0
color = Color(0, 0, 0, 1)

[node name="PlayerSpawner" type="Marker2D" parent="."]
position = Vector2(585, 572)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 491.0
offset_right = 1160.0
offset_bottom = 632.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kgo7o")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MarginContainer/Panel"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_right = 961.0
offset_bottom = 62.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_constants/line_spacing = 20
theme_override_fonts/font = ExtResource("11_ruo62")
theme_override_font_sizes/font_size = 38
text = "Welcome to JAMB GAME. Part of the Brackey 2-24 game Jam :)"
autowrap_mode = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_kyada")
autoplay = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(234, 197)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(580, 187)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(931, 185)

[node name="Boss" parent="." instance=ExtResource("8_ovasc")]
position = Vector2(595, 152)
